--- a/package.json
+++ b/package.json
@@ -9,8 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@jsdevtools/rehype-toc": "^3.0.2",
+    "axios": "^1.4.0",
     "next": "13.4.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "rehype": "^12.0.1",
+    "rehype-add-classes": "^1.0.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-highlight": "^6.0.0",
+    "rehype-parse": "^8.0.4",
+    "rehype-slug": "^5.1.0",
+    "rehype-stringify": "^9.0.3",
+    "remark": "^14.0.3",
+    "remark-gfm": "^3.0.1",
+    "remark-html": "^15.0.2",
+    "remark-parse": "^10.0.2",
+    "remark-rehype": "^10.1.0",
+    "remark-toc": "^8.0.1",
+    "unified": "^10.1.2"
   }
 }
