--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bytemd/plugin-gfm": "^1.21.0",
+    "@bytemd/react": "^1.21.0",
     "@jsdevtools/rehype-toc": "^3.0.2",
     "axios": "^1.4.0",
+    "bytemd": "^1.21.0",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
